one parameter instruction converter instructionList changed with lombok